--- a/locale-fork/locale/ky/LC_MESSAGES/django.po
+++ b/locale-fork/locale/ky/LC_MESSAGES/django.po
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: adhocracy4/categories/templates/a4categories/includes/module_categories_form.html:3
 #: adhocracy4/categories/templates/a4categories/includes/module_categories_form.html:3
@@ -5148,8 +5148,8 @@ msgid ""
 " is a platform provided by <a href=\"https://liqd.net/de/\">Liquid Democracy "
 "e.V.</a> in Berlin."
 msgstr ""
-" ist eine Plattform, die von <a href=\"https://liqd.net/de/\">Liquid "
-"Democracy e.V.</a> in Berlin bereitgestellt wird. "
+"- бул Берлинде <a href=\"https://liqd.net/de/\"> Liquid Democracy e.V. </a> "
+"тарабынан сунушталган платформа "
 
 #: adhocracy-plus/templates/footer.html:10
 msgid ""
