--- a/locale-fork/locale/ru/LC_MESSAGES/django.po
+++ b/locale-fork/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-21 16:26+0100\n"
+"POT-Creation-Date: 2024-03-12 09:55+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: adhocracy4/categories/templates/a4categories/includes/module_categories_form.html:3
 #: adhocracy4/categories/templates/a4categories/includes/module_categories_form.html:3
@@ -5144,11 +5146,12 @@ msgid "%(platformname)s is a participation platform operated by"
 msgstr ""
 
 #: adhocracy-plus/templates/footer.html:10
-#, python-format
 msgid ""
-"<a href=\"/\">%(platformname)s</a> is a platform provided by <a "
-"href=\"https://liqd.net/de/\">Liquid Democracy e.V.</a> in Berlin."
+" is a platform provided by <a href=\"https://liqd.net/de/\">Liquid Democracy "
+"e.V.</a> in Berlin."
 msgstr ""
+" - это платформа, предоставленная <a href=\"https://liqd.net/de/\"> Liquid "
+"Democracy e.V. </a> в Берлине."
 
 #: adhocracy-plus/templates/footer.html:10
 msgid ""
